# spacecookie

./: .gitignore  CHANGELOG.md  Main.hs  Makefile  README.md  TODO  build.nix  cabal.project  default.nix  example.yaml  gopherspacecookie.cabal  index.html  install.sh  shell.nix  spacecookie-gophermap.5.html  spacecookie.1.html  spacecookie.cabal  spacecookie.gophermap.5.html  spacecookie.json.5.html  spacecookie.nix  style.css
.github/workflows/: ci.yml  doc.yml
Gopher/: Types.hs
Spacecookie/: Gophermap.hs  Monad.hs  Types.hs
docs/: bucktooth-gophermap.txt  gophermap-pygopherd.txt  gopherplus.txt  rfc1436.txt  web.nix
docs/man/: spacecookie-gophermap.5  spacecookie.1  spacecookie.gophermap.5  spacecookie.json.5
etc/: build.sh  config.yaml  install.sh  nix-build.sh  spacecookie.json  spacecookie.service  spacecookie.socket  spacecookie.yaml
server/: Config.hs  FileType.hs  Main.hs  Systemd.hs
server/Network/Spacecookie/: Config.hs  FileType.hs  Path.hs  Sanitization.hs  Systemd.hs
src/: Main.hs
src/Network/: Gopher.hs
src/Network/Gopher/: Log.hs  Types.hs  Util.hs
src/Network/Gopher/Util/: Gophermap.hs  Socket.hs
src/Spacecookie/: Config.hs  ConfigParsing.hs  Gophermap.hs  Monad.hs
test/: EntryPoint.hs  Main.hs
test/Test/: FileTypeDetection.hs  Gophermap.hs  Integration.hs  Sanitization.hs
test/data/: bucktooth.gophermap
test/integration/: spacecookie.json
test/integration/root/: .gophermap  plain.txt
test/integration/root/dir/: strange.tXT
