cabal-version:       3.0
name:                spacecookie
version:             1.0.0.1
synopsis:            Gopher server library and daemon
description:         Simple gopher library that allows writing custom gopher
                     applications. Also includes a fully-featured gopher server
                     daemon complete with gophermap-support built on top of it.
license:             GPL-3.0-only
license-file:        LICENSE
author:              Lukas Epple
maintainer:          sterni-spacecookie@systemli.org
category:            Network
build-type:          Simple
homepage:            https://github.com/sternenseemann/spacecookie
bug-reports:         https://github.com/sternenseemann/spacecookie/issues
extra-source-files:  CHANGELOG.md
                     README.md
                     etc/spacecookie.json
                     etc/spacecookie.service
                     etc/spacecookie.socket
                     docs/rfc1436.txt
                     docs/man/spacecookie.1
                     docs/man/spacecookie.json.5
                     docs/man/spacecookie.gophermap.5
                     test/data/pygopherd.gophermap
                     test/data/bucktooth.gophermap
                     test/integration/root/.gophermap
                     test/integration/root/dir/.hidden
                     test/integration/root/dir/another/.git-hello
                     test/integration/root/dir/macintosh.hqx
                     test/integration/root/dir/mystery-file
                     test/integration/root/plain.txt
                     test/integration/spacecookie.json

common common-settings
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <5
                     , bytestring >= 0.10
                     , attoparsec >= 0.13
                     , directory >= 1.3
                     , filepath-bytestring >=1.4
                     , containers >= 0.6

common gopher-dependencies
  build-depends:       unix >= 2.7
                     , socket >= 0.8.2
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , text >= 1.2

executable spacecookie
  import:              common-settings, gopher-dependencies
  main-is:             Main.hs
  build-depends:       spacecookie
                     , aeson >= 1.5
                     , systemd >= 2.1.0
                     , fast-logger >= 2.4.0
  hs-source-dirs:      server
  other-modules:       Network.Spacecookie.Config
                     , Network.Spacecookie.Systemd
                     , Network.Spacecookie.FileType
                     , Paths_spacecookie
  autogen-modules:     Paths_spacecookie
  ghc-options:         -Wall -Wno-orphans -rtsopts -with-rtsopts=-I10 -threaded

library
  import:              common-settings, gopher-dependencies
  hs-source-dirs:      src
  exposed-modules:     Network.Gopher
                     , Network.Gopher.Util.Gophermap
                     , Network.Gopher.Util
  other-modules:       Network.Gopher.Types
                     , Network.Gopher.Log
                     , Network.Gopher.Util.Socket
  build-depends:       hxt-unicode >= 9.0
                     , async >= 2.2
  ghc-options:         -Wall -Wno-orphans

test-suite test
  import:              common-settings
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test, server
  other-modules:       Test.FileTypeDetection
                     , Test.Gophermap
                     , Test.Integration
                     , Network.Spacecookie.FileType
  build-depends:       tasty >=1.2
                     , tasty-hunit >=0.10
                     , tasty-expected-failure >=0.11
                     , spacecookie
                     , process >=1.2.0
                     , download-curl >=0.1
  ghc-options:         -Wall -Wno-orphans

source-repository head
  type: git
  location: git://github.com/sternenseemann/spacecookie.git

source-repository head
  type: git
  location: git://code.sterni.lv/spacecookie
